[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | __pycache__
  | build
  | dist
  | experimental
  | third_party
)/
'''

[tool.pdm.package-dir]
esm = "esm"
"esm.model" = "esm/model"
"esm.inverse_folding" = "esm/inverse_folding"
"esm.esmfold.v1" = "esm/esmfold/v1"
"esm.scripts" = "scripts"

[project]
name = "fair-esm"
version = "2.0.1"
description = "Evolutionary Scale Modeling (esm): Pretrained language models for proteins. From Facebook AI Research."
readme = "README.md"
authors = [
    {name = "Facebook AI Research"},
]
license = {text = "MIT"}
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/facebookresearch/esm"

[project.optional-dependencies]
esmfold = [
    "biopython",
    "deepspeed",
    "dm-tree",
    "einops",
    "ml-collections",
    "omegaconf",
    "pytorch-lightning",
    "scipy",
]

[project.scripts]
esm-extract = "esm.scripts.extract:main"
esm-fold = "esm.scripts.fold:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
